[package]
name = "rust-performance-measurement"
version = "0.2.2"
authors = ["Magic Len <len@magiclen.org>"]
description= "How to write a high-performance program in Rust?"
readme = "README.md"
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.2.6"

[[bench]]
name = "atomic_mutex"
harness = false

[[bench]]
name = "const_static_value"
harness = false

[[bench]]
name = "for_iterator"
harness = false

[[bench]]
name = "iter_enumerate"
harness = false

[[bench]]
name = "iter_skip"
harness = false

[[bench]]
name = "iter_take"
harness = false

[[bench]]
name = "one_char_push"
harness = false

[[bench]]
name = "one_char_write"
harness = false

[[bench]]
name = "push_str_write_fmt"
harness = false

[[bench]]
name = "vec_box_array"
harness = false