[package]
name = "rust-performance-measurement"
version = "0.2.3"
authors = ["Magic Len <len@magiclen.org>"]
description= "How to write a high-performance program in Rust?"
readme = "README.md"
license = "MIT"

[dependencies]

[dev-dependencies]
bencher = "0.1.5"
random-integer = "1.1.1"

[[bench]]
name = "atomic_mutex"
harness = false

[[bench]]
name = "const_static_value"
harness = false

[[bench]]
name = "contains_binary_search"
harness = false

[[bench]]
name = "for_iterator"
harness = false

[[bench]]
name = "iter_enumerate"
harness = false

[[bench]]
name = "iter_skip"
harness = false

[[bench]]
name = "iter_take"
harness = false

[[bench]]
name = "one_char_push"
harness = false

[[bench]]
name = "one_char_write"
harness = false

[[bench]]
name = "push_str_write_fmt"
harness = false

[[bench]]
name = "vec_box_array"
harness = false